--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,18 @@
 unbind C-b
 set -g prefix M-`
+
+bind -n S-left prev
+bind -n S-right next
+bind -n S-up new-window
+bind -n C-S-down kill-window
+
+# --set statusbar --#
+set -g status-justify centre
+set -g status-right-attr bright
+set -g status-right "%m/%d  %H:%M"
+set -g status-bg '#0A0A0A'
+set -g status-fg '#a99989'
+setw -g window-status-current-attr bright
+setw -g window-status-current-fg '#d5c4a1'
+#setw -g window-status-current-bg '#0A0A0A'
+set -g status-interval 1
