--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,8 @@
 unbind C-b
 set -g prefix M-`
 
-bind -n S-left prev
-bind -n S-right next
-bind -n S-up new-window
-bind -n C-S-down kill-window
+bind -n C-right new-window
+bind -n C-left kill-window
 
 # --set statusbar --#
 set -g status-justify centre
