--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,18 @@
 unbind C-b
 set -g prefix M-`
 
-bind -n C-right new-window
-bind -n C-left kill-window
+bind = new-window
+bind - kill-window
+
+# set window split
+bind-key v split-window -h
+bind-key g split-window
+
+# hjkl pane traversal
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # --set statusbar --#
 set -g status-justify centre
@@ -14,3 +24,6 @@ setw -g window-status-current-attr bright
 setw -g window-status-current-fg '#d5c4a1'
 #setw -g window-status-current-bg '#0A0A0A'
 set -g status-interval 1
+
+# color
+set -g default-terminal "screen-256color"
