--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,10 @@
 unbind C-b
 set -g prefix M-`
 
-bind -n C-left prev
-bind -n C-right next
+bind -n M-left prev
+bind -n M-right next
 
-bind = new-window
-bind - kill-window
+bind \ kill-window
 
 # set window split
 bind-key v split-window -h
