--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g prefix M-`
 
 bind -n M-left prev
 bind -n M-right next
+bind -n M-- kill-pane
 
 bind \ kill-window
 
@@ -11,10 +12,10 @@ bind-key v split-window -h
 bind-key g split-window
 
 # hjkl pane traversal
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 # --set statusbar --#
 set -g status-justify centre
