--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,10 @@ set -g prefix M-`
 
 bind -n M-left prev
 bind -n M-right next
-bind -n M-- kill-pane
+bind -n M-x kill-pane
+bind -n M-c new-window
+bind -n M-v split-window -h
+bind -n M-g split-window
 
 bind \ kill-window
 
