--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,12 @@ set -g prefix M-`
 
 bind -n M-left prev
 bind -n M-right next
-bind -n M-x kill-pane
 bind -n M-c new-window
 bind -n M-v split-window -h
 bind -n M-g split-window
 
-bind \ kill-window
+bind -n M-x kill-pane
+bind -n M-\ kill-window
 
 # set window split
 bind-key v split-window -h
@@ -19,6 +19,10 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
+bind -n M-left select-pane -L
+bind -n M-down select-pane -D
+bind -n M-up select-pane -U
+bind -n M-right select-pane -R
 
 # --set statusbar --#
 set -g status-justify centre
