--- a/econfig/.tmux.conf
+++ b/econfig/.tmux.conf
@@ -1,28 +1,12 @@
 unbind C-b
-set -g prefix M-`
+set -g prefix C-m
 
-bind -n M-left prev
-bind -n M-right next
-bind -n M-c new-window
-bind -n M-v split-window -h
-bind -n M-g split-window
-
-bind -n M-x kill-pane
-bind -n M-\ kill-window
+bind-key x kill-pane
+bind-key z kill-window
 
 # set window split
 bind-key v split-window -h
 bind-key g split-window
-
-# hjkl pane traversal
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-bind -n M-left select-pane -L
-bind -n M-down select-pane -D
-bind -n M-up select-pane -U
-bind -n M-right select-pane -R
 
 # --set statusbar --#
 set -g status-justify centre
