--- a/econfig/.tmux.conf
+++ b/econfig/.tmux.conf
@@ -1,8 +1,8 @@
 unbind C-b
 set -g prefix M-`
 
-bind -n M-left prev
-bind -n M-right next
+bind -n M-, prev
+bind -n M-. next
 bind -n M-c new-window
 bind -n M-v split-window -h
 bind -n M-g split-window
