--- a/econfig/.tmux.conf
+++ b/econfig/.tmux.conf
@@ -1,16 +1,26 @@
 unbind C-b
 set -g prefix M-`
 
-bind -n M-, prev
-bind -n M-. next
+#window select
+set-option -g base-index 1
 bind -n M-c new-window
-bind -n M-v split-window -h
-bind -n M-g split-window
-
-bind -n M-x kill-pane
+bind -n M-p prev
+bind -n M-n next
 bind -n M-\ kill-window
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
+bind-key -n M-0 select-window -t 10
 
 # set window split
+bind -n M-v split-window -h
+bind -n M-g split-window
 bind-key v split-window -h
 bind-key g split-window
 
@@ -19,10 +29,7 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
-bind -n M-left select-pane -L
-bind -n M-down select-pane -D
-bind -n M-up select-pane -U
-bind -n M-right select-pane -R
+bind -n M-x kill-pane
 
 # --set statusbar --#
 set -g status-justify centre
