--- a/econfig/.tmux.conf
+++ b/econfig/.tmux.conf
@@ -4,9 +4,9 @@ set -g prefix M-`
 #window select
 set-option -g base-index 1
 bind -n M-c new-window
-bind -n M-p prev
-bind -n M-n next
-bind -n M-\ kill-window
+bind -n M-, prev
+bind -n M-. next
+bind -n M-q kill-window
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
 bind-key -n M-3 select-window -t 3
