--- a/econfig/.tmux.conf
+++ b/econfig/.tmux.conf
@@ -9,12 +9,12 @@ bind l select-pane -R
 
 # --set statusbar --#
 set -g status-justify centre
-set -g status-right-attr bright
+#set -g status-right-attr bright
 set -g status-right "%m/%d  %H:%M"
 set -g status-bg '#0A0A0A'
 set -g status-fg '#a99989'
-setw -g window-status-current-attr bright
-setw -g window-status-current-fg '#d5c4a1'
+#setw -g window-status-current-attr bright
+#setw -g window-status-current-fg '#d5c4a1'
 #setw -g window-status-current-bg '#0A0A0A'
 set -g status-interval 1
 
